--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div>
     <div class="text-center" >
                 <div class="margin-bottom-20">
-            <a href="itms-services://?action=download-manifest&url=https://github.com/cnsiming/Qyz/qyz.plist" type="ios" >
+            <a href="itms-services://?action=download-manifest&url=https://raw.githubusercontent.com/cnsiming/Qyz/master/qyz.plist" type="ios" >
                 <i class="fa"></i> 点击安装
             </a>
         </div>
